--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Dan Motzenbecker" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;700&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Google+Sans+Display:wght@400;700&family=Google+Sans+Mono&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=block"
       rel="stylesheet"
