--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         "auto-zustand-selectors-hook/": "https://esm.sh/auto-zustand-selectors-hook/",
         "clsx": "https://esm.sh/clsx",
         "clsx/": "https://esm.sh/clsx/",
-        "gifenc": "https://esm.sh/gifenc",
-        "gifenc/": "https://esm.sh/gifenc/",
+        "gifenc": "https://cdn.jsdelivr.net/npm/gifenc@1.0.3/dist/gifenc.mjs",
+        "gifenc/": "https://cdn.jsdelivr.net/npm/gifenc@1.0.3/dist/",
         "immer": "https://esm.sh/immer",
         "immer/": "https://esm.sh/immer/",
         "lodash.shuffle": "https://esm.sh/lodash.shuffle",
