feat: Update p-limit dependency to v5.0.0
Updates the p-limit package to version 5.0.0 in both package.json and index.html. This ensures the application uses the latest stable version with potential performance or bug fixes.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         "immer/": "https://esm.sh/immer/",
         "lodash.shuffle": "https://esm.sh/lodash.shuffle",
         "lodash.shuffle/": "https://esm.sh/lodash.shuffle/",
-        "p-limit": "https://esm.sh/p-limit",
-        "p-limit/": "https://esm.sh/p-limit/",
+        "p-limit": "https://cdn.jsdelivr.net/npm/p-limit@5.0.0/+esm",
+        "p-limit/": "https://cdn.jsdelivr.net/npm/p-limit@5.0.0/",
         "react": "https://esm.sh/react",
         "react/": "https://esm.sh/react/",
         "react-dom": "https://esm.sh/react-dom",
