refactor: Update dependencies and LLM initialization
Updates CDN/ESM paths for gifenc and p-limit.
Refactors `llm.js` to lazily initialize the GoogleGenAI client for improved performance and robustness.

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         "auto-zustand-selectors-hook/": "https://esm.sh/auto-zustand-selectors-hook/",
         "clsx": "https://esm.sh/clsx",
         "clsx/": "https://esm.sh/clsx/",
-        "gifenc": "https://cdn.jsdelivr.net/npm/gifenc@1.0.3/dist/gifenc.mjs",
-        "gifenc/": "https://cdn.jsdelivr.net/npm/gifenc@1.0.3/dist/",
+        "gifenc": "https://cdn.jsdelivr.net/npm/gifenc@1.0.3/+esm",
+        "gifenc/": "https://cdn.jsdelivr.net/npm/gifenc@1.0.3/",
         "immer": "https://esm.sh/immer",
         "immer/": "https://esm.sh/immer/",
         "lodash.shuffle": "https://esm.sh/lodash.shuffle",
         "lodash.shuffle/": "https://esm.sh/lodash.shuffle/",
-        "p-limit": "https://cdn.jsdelivr.net/npm/p-limit@5.0.0/+esm",
-        "p-limit/": "https://cdn.jsdelivr.net/npm/p-limit@5.0.0/",
+        "p-limit": "https://esm.sh/p-limit@5.0.0",
+        "p-limit/": "https://esm.sh/p-limit@5.0.0/",
         "react": "https://esm.sh/react",
         "react/": "https://esm.sh/react/",
         "react-dom": "https://esm.sh/react-dom",
